Fix annoying flicker when in admin view and clicking on admin console link

--- a/web-ui/src/main/resources/catalog/style/gn_admin.less
+++ b/web-ui/src/main/resources/catalog/style/gn_admin.less
@@ -128,3 +128,7 @@ ul.error-message {
 .thread-state-TERMINATED {
   background-color: LIGHTGRAY;
 }
+
+#admin-console-link {
+  cursor: pointer;
+}
